--- a/styles/search.css
+++ b/styles/search.css
@@ -1,7 +1,4 @@
-/**
- * PhantomSearch - Autocomplete Dropdown Styles
- * Uses existing CSS variables from main.css
- */
+/* PhantomSearch - Autocomplete Dropdown Styles */
 
 .search-autocomplete {
     position: absolute;
